fix readme
